一元二次方程

--- a/Project1/Project1/Project1.vcxproj.filters
+++ b/Project1/Project1/Project1.vcxproj.filters
@@ -18,5 +18,11 @@
     <ClCompile Include="c++输出一个helloword.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="1y2c.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="practice.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
