--- a/OOP/CMakeLists.txt
+++ b/OOP/CMakeLists.txt
@@ -3,6 +3,5 @@ project(OOP)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(OOP src/OOP/Main.cpp)
-
-add_executable(Main src/OOP/Main.cpp)
+add_executable(OOP src/OOP/Main.cpp
+        src/OOP/Rect.cpp)
