类的构造及内联函数

--- a/OOP/CMakeLists.txt
+++ b/OOP/CMakeLists.txt
@@ -1,7 +1,10 @@
 cmake_minimum_required(VERSION 3.26)
-project(OOP)
+project(src/OOP111)
 
 set(CMAKE_CXX_STANDARD 17)
 
-add_executable(OOP src/OOP/Main.cpp
-        src/OOP/Rect.cpp)
+add_executable(OOP
+        src/OOP111/ex10_2Rect.h
+        src/OOP111/ex10_2Rect.cpp
+)
+
