--- a/OOP/CMakeLists.txt
+++ b/OOP/CMakeLists.txt
@@ -6,5 +6,7 @@ set(CMAKE_CXX_STANDARD 17)
 add_executable(OOP
         src/OOP111/ex10_2Rect.h
         src/OOP111/ex10_2Rect.cpp
+        src/OOP1/Student/Student.cpp
+
 )
 
