--- a/OOP/CMakeLists.txt
+++ b/OOP/CMakeLists.txt
@@ -4,11 +4,6 @@ project(src/OOP111)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(OOP
-        src/OOP111/ex10_2Rect.h
-        src/OOP111/ex10_2Rect.cpp
-        src/OOP1/Student/Student.cpp
-        src/OOP1/Student/Studentcopy.cpp
-        src/OOP1/Student/Studentcopy.cpp
-
+        src/OOP1/Copy/Student.cpp
 )
 
