--- a/disorderly/OOP/CMakeLists.txt
+++ b/disorderly/OOP/CMakeLists.txt
@@ -4,6 +4,6 @@ project(src/OOP111)
 set(CMAKE_CXX_STANDARD 17)
 
 add_executable(OOP
-        src/OOP1/Copy/Student.cpp
+        ../../Test/demo/Copy/Student.cpp
 )
 
